
	* test/config.scm (test* "kahua-site-init"): add kahua-cgilog-directory
	(test* "kahua-site-init again"): add kahua-cgilog-directory

	* src/kahua/config.scm.in (<kahua-custom>): add cgilog-directory
	(define-kahua-config-accessor): add cgilog-directory
	(kahua-cgilogpath): add.
	(define-module kahua.config): add kahua-cgilog-directory, kahua-cgilogpath

2008-08-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/protocol/http.scm, src/kahua/server.scm
	  Merge the 2008-08-10 fix into the 2008-03-05 fix.

2008-08-10  Shiro Kawai  <shiro@acm.org>

	* src/kahua/protocol/http.scm (kahua-header->http-header): do not
	  add 'domain' attribute in the cookie if the host name doesn't contain
	  a dot (like 'localhost'); RFC2965 says cookies with such domain
	  name should be rejected by the client.

2008-05-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7.3 released.

2008-04-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* These are fixes of problems on Leopard (Mac OS X 10.5.x).

	* Fix: test/shell.scm, test/httpd.scm, test/dead-lock.scm,
	       test/admin.scm, test/spvr.scm (r3330)
	  Wait child processes (w/ process-wait) appropriately and drop
	  extra sys-sleep.

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm (r3330)
	  Ignore exceptions in some situation.

	* Add: src/kahua/util.scm (r3330)
	  Add a procedure "with-ignoring-exception".

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm (r3329, r3332)
	  Fix wrong use of socket-shutdown's the 2nd argument, and comment
	  its mean (SHUT_RD/SHUT_WR/SHUT_RDWR).

2008-03-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7.2 released.

2008-03-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm, src/kahua/protocol/http.scm
	  Fix that domain cookie attribute was specified unnecessarily.
	  It causes that web browser reject the cookie when request
	  host name contain no ".".  This cookie problem was reported by
	  Kristof Bastiaensen at first,  and was pointed out by
	  Shiro Kawai more clearly.
